[package]
name = "cargo-unfeature"
description = "Expand rust features"
version = "0.1.0"
edition = "2018"

[dependencies]
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"]}
regex = "1.11"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
cargo_metadata = "0.19"
cargo-manifest = "0.19"
toml = "0.8"
