[package]
name = "cargo-unfeature"
description = "Expand rust features"
version = "0.1.6"
edition = "2024"
rust-version = "1.88"

[dependencies]
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"]}
regex = "1.11"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cargo_metadata = "0.21"
cargo-manifest = "0.19"
toml = "0.8"
